--- a/fern/docs/pages/verbs/conference.mdx
+++ b/fern/docs/pages/verbs/conference.mdx
@@ -1,13 +1,18 @@
-The `conference` verb places a call into a conference.
+---
+title: Conference
+subtitle: Places a call into a conference.
+hide-toc: true
+---
+
 ```json
-  {
-    "verb": "conference",
-    "name": "test",
-    "beep": true,
-    "startConferenceOnEnter": false,
-    "waitHook": "/confWait",
-    "enterHook": "/confEnter"   
-  },
+{
+  "verb": "conference",
+  "name": "test",
+  "beep": true,
+  "startConferenceOnEnter": false,
+  "waitHook": "/confWait",
+  "enterHook": "/confEnter"   
+},
 ```
 You can use the following attributes in the `conference` command:
 
