--- a/fern/docs/pages/verbs/dialogflow.mdx
+++ b/fern/docs/pages/verbs/dialogflow.mdx
@@ -1,4 +1,8 @@
-The `dialogflow` verb is used to connect a call to a [Google Dialogflow](https://cloud.Google.com/dialogflow) bot.
+---
+title: Dialogflow
+subtitle: connect a call to a [Google Dialogflow](https://cloud.Google.com/dialogflow) bot.
+hide-toc: true
+---
 
 ```json
 {
