--- a/fern/docs/pages/verbs/enqueue.mdx
+++ b/fern/docs/pages/verbs/enqueue.mdx
@@ -1,4 +1,8 @@
-The `enqueue` command is used to place a caller in a queue.
+---
+title: Enqueue
+subtitle: Place a caller in a queue.
+hide-toc: true
+---
 
 ```json
 {
