--- a/fern/docs/pages/verbs/hangup.mdx
+++ b/fern/docs/pages/verbs/hangup.mdx
@@ -1,4 +1,9 @@
-The hangup command terminates the call and ends the application.
+---
+title: Hangup
+subtitle: Terminates the call.
+hide-toc: true
+---
+
 ```json
 {
   "verb": "hangup",
