--- a/fern/docs/pages/verbs/lex.mdx
+++ b/fern/docs/pages/verbs/lex.mdx
@@ -1,4 +1,8 @@
-The 'lex' verb connects a call to an [Amazon Lex](https://aws.amazon.com/lex/) V2 bot. 
+---
+title: Lex
+subtitle: connects a call to an [Amazon Lex](https://aws.amazon.com/lex/) V2 bot. 
+hide-toc: true
+---
 
 ```json
 {
