--- a/fern/docs/pages/verbs/listen.mdx
+++ b/fern/docs/pages/verbs/listen.mdx
@@ -1,3 +1,9 @@
+---
+title: Leave
+subtitle: Creates a unidirectional or bidirectional audio stream to a remote websocket server.
+hide-toc: true
+---
+
 jambonz does not have a 'record' verb. This is by design, for data privacy reasons:  
 
 >Recordings can contain sensitive and confidential information about your customers, and such data is never stored at rest in the jambonz core.
