--- a/fern/docs/pages/verbs/pause.mdx
+++ b/fern/docs/pages/verbs/pause.mdx
@@ -1,4 +1,9 @@
-The pause command waits silently for a specified number of seconds.
+---
+title: Pause
+subtitle: Waits silently for a specified number of seconds.  
+hide-toc: true
+---
+
 ```json
 {
   "verb": "pause",
