--- a/fern/docs/pages/verbs/play.mdx
+++ b/fern/docs/pages/verbs/play.mdx
@@ -1,5 +1,10 @@
+---
+title: Play
+subtitle: Stream recorded audio to a call.
+hide-toc: true
+---
 
-The play command is used to stream recorded audio to a call.
+
 ```json
 {
   "verb": "play",
