--- a/fern/docs/pages/verbs/rasa.mdx
+++ b/fern/docs/pages/verbs/rasa.mdx
@@ -1,5 +1,8 @@
-> Added in v0.6.6
-The `rasa` verb is used to connect a call to a [Rasa](https://rasa.com/) assistant.
+---
+title: Rasa
+subtitle: Connect a call to a [Rasa](https://rasa.com/) assistant
+hide-toc: true
+---
 
 ```json
 {
