--- a/fern/docs/pages/verbs/recognizer.mdx
+++ b/fern/docs/pages/verbs/recognizer.mdx
@@ -1,6 +1,9 @@
-The `recognizer` property is used in multiple verbs ([gather](/verbs/verbs/gather), [transcribe](/verbs/verbs/transcribe), [dial](/verbs/verbs/dial)). It selects and configures the speech recognizer.  
+---
+title: Recognizer
+subtitle: Customize speech recognition in a `gather` or `transcribe` verb
+hide-toc: true
+---
 
-It is an object containing the following properties:
 
 | option        | description | required  |
 | ------------- |-------------| -----|
