--- a/fern/docs/pages/verbs/redirect.mdx
+++ b/fern/docs/pages/verbs/redirect.mdx
@@ -1,4 +1,12 @@
-The redirect action is used to transfer control to another JSON document that is retrieved from the specified url.  All actions after `redirect` are unreachable and ignored.
+---
+title: Redirect
+subtitle: transfer control to another JSON document that is retrieved from the specified url
+hide-toc: true
+---
+
+<Warning>
+All actions after `redirect` are unreachable and ignored.
+</Warning>
 
 ```json
 {
