--- a/fern/docs/pages/verbs/say.mdx
+++ b/fern/docs/pages/verbs/say.mdx
@@ -1,4 +1,8 @@
-The say command is used to send synthesized speech to the remote party. The text provided may be either plain text or may use SSML tags.  jambonz supports a large number of speech vendors out of the box (see list below), and you may add others via the [custom speech API](/guides/features/custom-speech-tts).
+---
+title: Say
+subtitle: Send synthesized speech to the remote party.
+hide-toc: true
+---
 
 ```json
 {
@@ -22,19 +26,4 @@ You can use the following options in the `say` action:
 | synthesizer.voice | voice to use.  Note that the voice list differs whether you are using aws or Google. Defaults to application setting, if provided. | no |
 | loop | the number of times a text is to be repeated; 0 means repeat forever.  Defaults to 1. | no |
 | earlyMedia | if true and the call has not yet been answered, play the audio without answering call.  Defaults to false | no |
-
-## Text-to-speech vendors
-jambonz natively supports the following text-to-speech services:
-- aws
-- azure
-- deepgram
-- elevenlabs
-- google
-- ibm
-- nuance
-- nvidia
-- wellsaid
-- whisper
-
-Note: Microsoft supports [on-prem and private link options](/guides/features/azure-private-link) for deploying the speech service in addition to the hosted Microsoft service.
 
