--- a/fern/docs/pages/verbs/sip-request.mdx
+++ b/fern/docs/pages/verbs/sip-request.mdx
@@ -1,6 +1,8 @@
-> Added in v0.7.6
-
-The sip:request action is used to send a SIP INFO, NOTIFY, or MESSAGE request on an established call leg, i.e. an in-dialog request.  This allows an application to send arbitrary SIP messages during a call; e.g. to transmit metadata to the calling sip endpoint using a SIP INFO message.
+---
+title: SIP Request
+subtitle: Sends a SIP INFO, NOTIFY, or MESSAGE request during a call.
+hide-toc: true
+---
 
 ```json
 {
