--- a/fern/docs/pages/verbs/transcribe.mdx
+++ b/fern/docs/pages/verbs/transcribe.mdx
@@ -1,7 +1,12 @@
+---
+title: Transcribe
+subtitle: Send real time transcriptions of speech continuously.
+hide-toc: true
+---
 
-The transcribe verb is used to send real time transcriptions of speech to a web callback.
-
-The transcribe command is only allowed as a nested verb within a dial or listen verb.  Using transcribe in a dial command allows a long-running transcription of a phone call to be made, while nesting within a listen verb allows transcriptions of recorded messages (e.g. voicemail).
+<Note>
+The transcribe verb may appear on its own or as a nested verb within a dial or listen verb.
+</Note>
 
 ```json
 {
