--- a/fern/docs/pages/verbs/dequeue.mdx
+++ b/fern/docs/pages/verbs/dequeue.mdx
@@ -1,6 +1,12 @@
-The `dequeue` verb removes the lowest priority call from a specified queue and bridges that call to the current caller.  
+---
+title: Dequeue
+subtitle: Removes the lowest priority call from a specified queue and bridges that call to the current caller.
+hide-toc: true
+---
 
-Note that (as of release 0.8.3-4) calls can optionally be [enqueued](/verbs/verbs/enqueue) with priority values that will dictate how they are ordered in the queue.  If priorities are not specified then the queue will operate in FIFO order.
+<Note>
+Calls can optionally be [enqueued](/verbs/verbs/enqueue) with priority values that will dictate how they are ordered in the queue.  If priorities are not specified then the queue will operate in FIFO order.
+</Note>
 
 ```json
 {
@@ -20,10 +26,6 @@ You can use the following options in the `dequeue` command:
 | actionHook | A webhook invoke when call ends. If no webhook is provided, execution will continue with the next verb in the current application. <br/>See below for specified request parameters.| no |
 | beep | if true, play a beep tone to this caller only just prior to connecting the queued call; this provides an auditory cue that the call is now connected | no |
 | timeout | number of seconds to wait on an empty queue before returning (default: wait forever) | no |
-
-{/*
-| confirmHook | A webhook for an application to run on the callee's end before the call is bridged.  This will allow the application to play an informative message to a caller as they leave the queue (e.g. "your call may be recorded") | no |
-*/}
 
 The *actionHook* webhook will contain a `dequeueResult` property indicating the completion reason:
 
