--- a/fern/docs/pages/verbs/dtmf.mdx
+++ b/fern/docs/pages/verbs/dtmf.mdx
@@ -1,4 +1,8 @@
-The `dtmf` verb generates a string of dtmf digit signals.  These are sent as RTP payloads using [RFC 2833](https://datatracker.ietf.org/doc/html/rfc2833).
+---
+title: Dtmf
+subtitle: Generates a string of dtmf digit
+hide-toc: true
+---
 
 ```json
 {
