--- a/fern/docs/pages/verbs/sip-refer.mdx
+++ b/fern/docs/pages/verbs/sip-refer.mdx
@@ -1,6 +1,8 @@
-> Added in v0.7.0
-
-The sip:refer action is used to blind transfer a call.  It will send a sip REFER to the far end carrier or sip phone, which must support the REFER in order for the transfer to work. After the sip:refer completes successfully, the call leg will have left the jambonz platform.
+---
+title: SIP Refer
+subtitle: Perform a blind transfer of a call by sending a SIP REFER
+hide-toc: true
+---
 
 ```json
 {
