--- a/fern/docs/pages/features/siprec-client.mdx
+++ b/fern/docs/pages/features/siprec-client.mdx
@@ -5,7 +5,7 @@ hidden: false
 
 jambonz can integrate with external recording platforms using [SIPREC](https://datatracker.ietf.org/doc/html/draft-ietf-siprec-protocol).  In this scenario, jambonz acts as a SIPREC client and forks the audio streams to send to a configured SIPREC server.
 
-This feature is enabled via the [config](/docs/webhooks/config) verb using the `record` property.  This property can be used to start, stop, pause or resume the recording.
+This feature is enabled via the [config](/verbs/verbs/config) verb using the `record` property.  This property can be used to start, stop, pause or resume the recording.
 
 ```json
 {
