--- a/fern/docs/pages/features/handling-action-hook-delays.mdx
+++ b/fern/docs/pages/features/handling-action-hook-delays.mdx
@@ -4,13 +4,13 @@ hidden: false
 ---
 
 
-When the [gather verb](/docs/webhooks/gather) collects a user utterance and submits it to the jambonz webhook or websocket application for processing, there may be a noticeable delay depending on what the back-end logic needs to do.  
+When the [gather verb](/verbs/verbs/gather) collects a user utterance and submits it to the jambonz webhook or websocket application for processing, there may be a noticeable delay depending on what the back-end logic needs to do.  
 
 For instance, it may need to update a CRM system, make an http request, or feed an LLM and wait for a response etc.  Some of these operations may take a while to complete, and you want to be able to provide a user with some cue that this is normal system processing.
 
 In addition to these normal delays, there could also be situations where the backend has failed in some unexpected way (e.g. crashed, gone offline, restarted) and in this case the user would be left listening to dead air.
 
-For both of these cases, jambonz provides a way to pre-program instructions on what to say or play something when these sorts of delays are experienced.  This feature is enabled by the `actionHookDelayAction` property in either the gather or [config](/docs/webhooks/config) verbs. It is an object with the following properties:
+For both of these cases, jambonz provides a way to pre-program instructions on what to say or play something when these sorts of delays are experienced.  This feature is enabled by the `actionHookDelayAction` property in either the gather or [config](/verbs/verbs/config) verbs. It is an object with the following properties:
 
 | property      | description | required  |
 | ------------- |-------------| -----|
